# ctsc

./: -  .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-CN.md  README.md  README.zh-CN.md
.cursor/rules/: ctsc-port.mdc
ctsc/: CMakeLists.txt  CMakePresets.json
ctsc/include/ctsc/: arena.h  ast.h  binder.h  buffer.h  checker.h  common.h  diagnostic.h  emitter.h  hashmap.h  json.h  json_writer.h  parser.h  project.h  scanner.h  string_ref.h  symbol.h  type.h  utf8.h
ctsc/src/binder/: binder.c  symbol.c
ctsc/src/checker/: checker.c  diag_dump.c  type_registry.c
ctsc/src/core/: arena.c  buffer.c  diagnostic.c  hashmap.c  json_parser.c  json_writer.c  string_ref.c  utf8.c
ctsc/src/driver/: main.c  project.c
ctsc/src/emitter/: emitter.c
ctsc/src/parser/: ast.c  ast_json.c  parser.c
ctsc/src/scanner/: _gen_unicode.js  scanner.c  token_names.c  unicode_id.c  unicode_id.h  unicode_id_tables.inl
ctsc/tests/: test_arena.c  test_binder.c  test_checker.c  test_emitter.c  test_main.c  test_parser.c  test_scanner.c  test_string_ref.c
demo/: hello-minimal.ctsc.js  hello-minimal.ts  hello.ctsc.js  hello.ts  hello.tsc.js
docs/: M5-PLAN.md  ROADMAP.md
fixtures/binder/nested/: 01_function_params.ts  02_function_locals.ts  03_block_let.ts
fixtures/binder/top-level/: 02_const.ts  03_multiple_vars.ts  05_var_and_function.ts
fixtures/checker/abstract/: 01_abstract_method.ts
fixtures/checker/accessors/: 01_getter.ts  02_getter_setter.ts
harness/: debug-diff.ts  package-lock.json  package.json  tsconfig.json
harness/src/: agent.ts  build.ts  cli.ts  curriculum.ts  differ.ts  loop.ts  oracle-ast.ts  oracle-binder.ts  oracle-checker-diag.ts  oracle-checker-types.ts  oracle.ts  paths.ts  planner.ts  project.ts  runner.ts  sample-baselines.ts  selfhost.ts  state.ts  types.ts  watchdog.ts
scripts/: bootstrap.ps1  run-loop.ps1  run-loops.ps1  snapshot.ps1
(+507 files in other folders)
